# Wavebot

./: README.md  TestingArm.py  calibrate.py  camera.py  config.py  main.py  pyproject.toml  servos.py  temp.py  vision.py
docs/wavebot/: camera.html  config.html  index.html  servos.html  vision.html
facetracking/: Face_Tracking.py  Final_Code.py  TestingArm.py
legacy/: Face_Tracking.py
old/: Final_Code.py
wavebot/: __init__.py  camera.py  config.py  servos.py  vision.py
