[project]
name = "wavebot"
version = "0.1.0"
description = "Face tracking project for Raspberry Pi using OpenCV and Adafruit servos"
dependencies = [
  "numpy",
  "opencv-python",
  "adafruit-circuitpython-pca9685",
  "adafruit-circuitpython-servokit",
  "adafruit-blinka",
  "picamera; platform_machine == 'armv7l'",
]
requires-python = ">=3.7"
