[project]
name = "wavebot"
version = "0.1.0"
description = "Face tracking project for Raspberry Pi using OpenCV and Adafruit servos"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24,<2.0",
  "opencv-python>=4.7.0,<4.9.0",
  "adafruit-circuitpython-pca9685",
  "adafruit-circuitpython-servokit",
  "adafruit-blinka",
  "picamera; platform_machine == 'armv7l'",
]
[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
]
